@@ -1,8 +1,9 @@
 #!/bin/sh
 
-TMPFILE=`mktemp`
-TMPFILE2=`mktemp`
-TMPFILE3=`mktemp`
+pattern=/tmp/check-jni-methods.XXXXXX
+TMPFILE=`mktemp $pattern` || { echo >&2 "$0: Unable to make temp file; aborting" ; exit 3; }
+TMPFILE2=`mktemp $pattern` || { echo >&2 "$0: Unable to make temp file; aborting" ; exit 3; }
+TMPFILE3=`mktemp $pattern` || { echo >&2 "$0: Unable to make temp file; aborting" ; exit 3; }
 
 # Find all methods defined in the header files generated
 # from the java source files.
